# DjangoJumpStart

./: .env.example  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
apps/user/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
apps/user/migrations/: 0001_initial.py  0002_user_image.py  0003_historicaluser_historicaluser_user_permissions_and_more.py
config/: settings.py  urls.py
templates/admin/: base_site.html
