[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Jose Valencia <jose.valencia@ctsturismo.cl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.1"
psycopg = "^3.3.2"
djangorestframework = "^3.16.1"
markdown = "^3.10"
djangorestframework-simplejwt = "^5.5.1"
django-cors-headers = "^4.9.0"
django-environ = "^0.12.0"
pillow = "^12.1.0"
django-simple-history = "^3.11.0"
django-filter = "^25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
